# capi

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  LICENSE  Makefile  README.md  SECURITY.md  full_failed_log.txt  install.ps1  install.sh  openvino.conf
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  release.yml  test.yml
capi-cli/: Cargo.toml  build.rs
capi-cli/src/: main.rs
capi-core/: Cargo.toml  build.rs
capi-core/src/: genai_bridge.rs  lib.rs
capi-core/src/api/: chat.rs  embeddings.rs  mod.rs  models.rs
capi-core/src/config/: mod.rs
capi-core/src/cpp/: bridge.cpp  bridge.h
capi-core/src/db/: chats.rs  mod.rs  models.rs
capi-core/src/hardware/: device_detect.rs  mod.rs  priority.rs  resource_detect.rs  resource_validator.rs
capi-core/src/inference/: mod.rs  session.rs
capi-core/src/inference/genai/: config.rs  ffi.rs  metrics.rs  mod.rs  pipeline.rs
capi-core/src/model_manager/: downloader.rs  memory_estimator.rs  metadata.rs  mod.rs  model_lock.rs  registry.rs
capi-core/src/runtime/: openvino_manager.rs
capi-launcher/: Cargo.toml  build.rs
capi-launcher/src/: main.rs
capi-server/: Cargo.toml
capi-server/src/: main.rs
capi-ui/: package-lock.json  package.json
capi-ui/src/: app.css
capi-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
capi-ui/src-tauri/capabilities/: default.json
capi-ui/src-tauri/icons/: icon.icns
capi-ui/src-tauri/src/: lib.rs  main.rs
capi-ui/src/lib/: Modal.svelte  ResourceGauge.svelte
capi-ui/src/lib/components/: AppSidebar.svelte
capi-ui/src/lib/stores/: app.ts
capi-ui/src/routes/: +layout.svelte  +page.svelte
capi-ui/src/routes/hardware/: +page.svelte
capi-ui/src/routes/models/: +page.svelte
capi-ui/src/routes/settings/: +page.svelte
libs/openvino/: openvino
libs/openvino/runtime/: version.txt
libs/openvino/runtime/cmake/: OpenVINOConfig-version.cmake  OpenVINOConfig.cmake  OpenVINOGenAIConfig.cmake  OpenVINOGenAIConfigVersion.cmake  OpenVINOGenAITargets-release.cmake  OpenVINOGenAITargets.cmake  OpenVINOTargets-release.cmake  OpenVINOTargets.cmake
libs/openvino/runtime/include/openvino/genai/: version.hpp
libs/openvino/runtime/lib/intel64/: libopenvino.so.2541  libopenvino_c.so.2025.4.1  libopenvino_c.so.2541  libopenvino_genai.so.2541  libopenvino_genai_c.so.2025.4.1.0  libopenvino_genai_c.so.2541  libopenvino_ir_frontend.so.2025.4.1  libopenvino_ir_frontend.so.2541  libopenvino_onnx_frontend.so.2541  libopenvino_paddle_frontend.so.2025.4.1  libopenvino_paddle_frontend.so.2541  libopenvino_pytorch_frontend.so.2025.4.1  libopenvino_pytorch_frontend.so.2541  libopenvino_tensorflow_frontend.so.2541  libopenvino_tensorflow_lite_frontend.so.2025.4.1  libopenvino_tensorflow_lite_frontend.so.2541
libs/openvino/runtime/lib/intel64/pkgconfig/: openvino.pc
scripts/: build_linux.sh  build_windows.ps1  setup_dev.ps1
