[workspace]
members = [
    "capi-core",
    "capi-server",
    "capi-cli",
    "capi-launcher",
    "capi-ui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Capi Contributors"]
license = "MIT"
repository = "https://github.com/tiagoflino/capi"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
dialoguer = "0.11"
