[package]
name = "capi-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "capi"
path = "src/main.rs"

[dependencies]
capi-core = { path = "../capi-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dialoguer = { workspace = true }
crossterm = "0.28"
ratatui = "0.29"
