[package]
name = "capi-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "capi"
path = "src/main.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.0"
tar = "0.4"
indicatif = "0.17"
futures-util = { workspace = true }
zip = "0.6"
